apps/harbor/harbor/gateway.yaml
# HTTP Route for Mealie
# Route traffic from custom-domain-gateway (mealie.tryy3.dev) to mealie service

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-route
  namespace: harbor
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: custom-domain-gateway
      namespace: envoy
      sectionName: https-harbor
  hostnames:
    - "harbor.tryy3.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: harbor-core
          namespace: harbor
          port: 80
